--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark" />
     <link rel="stylesheet" href="css/pico.min.css">
+    <link
+    rel="stylesheet"
+     href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css"
+    />
     <title>Hello world!</title>
   </head>
   <body>
